[package]
name = "pg_str"
version = "0.2.1"
edition = "2018"
authors = ["Matt Jensen<mattjensen@fastmail.com", "Abumni Association <contact@abumni.com>"]
include = [
  "**/*.rs",
  "Cargo.toml",
  "README.md"
]
readme = "README.md"
repository = "https://github.com/abumni/pg_str"
documentation = "https://docs.rs/pg_str"
homepage = "https://github.com/abumni/pg_str"
license="MIT"
description = """
Adds str functions to Postgresql via an extension."""
keywords = ["postgresql", "string", "cases", "pluralize", "markdown"]
categories = ["text-processing", "database"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
# pg10 = ["pgx/pg10", "pgx-tests/pg10" ]
# pg11 = ["pgx/pg11", "pgx-tests/pg11" ]
# pg12 = ["pgx/pg12", "pgx-tests/pg12" ]
pg13 = ["pgx/pg13", "pgx-tests/pg13" ]
# pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
pg_test = []

[dependencies]
pgx = "0.1.21"
Inflector = "0.11.4"
str_slug = "0.1.3"
pgx-macros = "0.1.21"
pulldown-cmark = "0.9.1"
any_ascii = "0.3.0"
rand = "0.8.4"

[dev-dependencies]
pgx-tests = "0.1.21"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
